tests/macros/expand/validate_on_key.stderr
error: option `validate_on_key` does not exist for kind `expand`
 --> tests/macros/expand/validate_on_key.rs:2:44
  |
2 |     let q = requestty::questions![Expand { validate_on_key: todo!() }];
  |                                            ^^^^^^^^^^^^^^^
