tests/macros/expand/validate_on_key.rs
fn main() {
    let q = requestty::questions![Expand { validate_on_key: todo!() }];
}
